--- a/Module_2/module-2-programming-project.html
+++ b/Module_2/module-2-programming-project.html
@@ -20,12 +20,11 @@
 //-----------//
 prompt(variablename);
 
-// 1. Create a string variable called 'name' and store your name in it.
+// 1. Create a string variable that uses a prompt that asks the customer for his/her name
 
-// 2. Write code to alert your name in the browser.
+// 2. Write the value from #1 in the Console
 
-// 3. Create two number variables name 'first' and 'second'. Assign 13 to
-//    first and 26 to second. Alert the sum of the two variables in the browser.
+// 3. Create a conditional statement that validates if the user has not input a name from #1, provide an alternate message.
 
 
 
