--- a/Module_2/module-2-programming-project.html
+++ b/Module_2/module-2-programming-project.html
@@ -29,42 +29,42 @@ prompt(variablename);
 
 
 //--------//
-// Values //
+// Concatentate Strings //
 //--------//
 console.log("Values");
 
 
-//1. Create a variable that stores a question
+//1. Take "23" and " Michael Jordan" and concatenate the strings together to create one
 
-//2. Create a prompt that uses that variable from #1 to display the data
+//2. Create a concatenate string , and with the first input as "Hello" & second input as "Your name", but use a prompt to input your name
+//.  output the concatenate string on the screen
+//.  Example; Hello Michael Jordan
 
-//3. Write the output on the user screen via the HTML
 
-//4. Create a variable that stores the answer to display it via an alert on the screen
-
-//-------------//
-// CONCAT STRINGS //
-//-------------//
-console.log("Concat Strings");
-
-// 1. Create a variable that provides a first name
-
-// 2. Create a variable that provides a last name
-
-// 3. Create a variable that consolidates both the first and last name together and write 
-//    it on the screen.
-
-//---------------------- //
-// COMPARISON OPERATORS //
-//----------------------//
+//------------------------------------------------ //
+// COMPARISON OPERATORS and CONDITIONAL STATEMENTS //
+//-------------------------------------------------//
 console.log("Comparison Operators");
-// 1. Create variable to equal a numeric value
+// 1. Show how you would validate that xyz equals 45, input the code below xyz value
+      xyz = 45;
+// 2. Create a conditional statement if the value is either < or > (start is greater than end and end is greater that start)
+      var start = 500;
+      var end = 400;
 
-// 2. Create a conditional statement if the value is either < or > 
+// 3. Provide an conditional statement with an else statement. Create an input prompt that inputs a new score
+//.   Score is 45, validate that 45 is greater or equal to the value that was entered in the input prompt, else provide an alternative answer
 
-// 3. Add 2 Else statements to your condition and a default answer
+  //------------------------------------------------ //
+// ARRAYS //
+//-------------------------------------------------//
 
-
+  //1. Setup an array to hold 5 objects, provide 5 different places that you enjoy traveling to
+  
+  //2. Output in the Console the array values used in #1
+  
+  //3. Use the pop function on the array and output the array list
+  
+  //4. Use the shift function on the array and output the array list
 
 </script>
 </head>
