--- a/Module_2/module-2-programming-project.html
+++ b/Module_2/module-2-programming-project.html
@@ -21,11 +21,13 @@
 prompt(variablename);
 
 // 1. Create a string variable that uses a prompt that asks the customer for his/her name
-
+var customerName = prompt("What is your Name Shopper?");
 // 2. Write the value from #1 in the Console
-
+console.log(name);
 // 3. Create a conditional statement that validates if the user has not input a name from #1, provide an alternate message.
-
+if(name == ""){
+  console.log("name is not found")
+}
 
 
 //--------//
@@ -35,11 +37,12 @@ console.log("Values");
 
 
 //1. Take "23" and " Michael Jordan" and concatenate the strings together to create one
-
+var player = "Michael Jordan" + 23;
 //2. Create a concatenate string , and with the first input as "Hello" & second input as "Your name", but use a prompt to input your name
 //.  output the concatenate string on the screen
 //.  Example; Hello Michael Jordan
-
+var greeting = prompt("What is your name?");
+console.log("Hello " + greeting);
 
 //------------------------------------------------ //
 // COMPARISON OPERATORS and CONDITIONAL STATEMENTS //
@@ -47,25 +50,46 @@ console.log("Values");
 console.log("Comparison Operators");
 // 1. Show how you would validate that xyz equals 45, input the code below xyz value
       xyz = 45;
+      if (xyz ===45){
+        console.log("Correct Value");
+      } else {
+        console.log("Incorrect Value");
+      }
 // 2. Create a conditional statement if the value is either < or > (start is greater than end and end is greater that start)
       var start = 500;
       var end = 400;
+      if(start > end){
+        console.log("First variable is greater");
+      } else if (end > start){
+        console.log("Second variable is greater");
+      } else {
+        console.log("The values are the same");
+      }
+      
 
 // 3. Provide an conditional statement with an else statement. Create an input prompt that inputs a new score
-//.   Score is 45, validate that 45 is greater or equal to the value that was entered in the input prompt, else provide an alternative answer
-
+//.   Score is 45, validate that 45 is greater or equal to the value that was entered in the input prompt, else provide an alternative answervar 
+var yourScore = prompt("What is your score>");
+var score = 45;
+if (yourScore > score){
+  console.log("Your score is greater ");
+} else if (score > yourScore) {
+  console.log("Score is greater than your score");
+} else {
+  console.log("We have a Tie");
+}
   //------------------------------------------------ //
 // ARRAYS //
 //-------------------------------------------------//
 
   //1. Setup an array to hold 5 objects, provide 5 different places that you enjoy traveling to
-  
+  var vacation = ["Detriot", "Ocean City", "Tennesee", "Savannah", "Chicago"];
   //2. Output in the Console the array values used in #1
-  
+  console.log(vacation);
   //3. Use the pop function on the array and output the array list
-  
+  vacation.pop()
   //4. Use the shift function on the array and output the array list
-
+  vacation.shift();
 </script>
 </head>
 <body>
