--- a/Module_5/module-5-programming-project.html
+++ b/Module_5/module-5-programming-project.html
@@ -20,23 +20,17 @@ console.log("Events");
 // Input Fields //
 //--------------//
 console.log("Input Fields");
+<input type="text" id="myTextField" value="Type here" oninput="changeBackgroundColor()">
 
 // 1. Change the background color to red for the input text field (the <input>
 //    tag) in the HTML body when obtaining the focus and change it back to
 //    white when the focus is lost.
+  
 
-// 2. Read the content of the input field (the <input> tag) when the focus is
-//    lost and alert it to the user.
+// 2. Change the background color to the original input background color
 
-
-
-//------------//
-// Paragraphs //
-//------------//
-console.log("Paragraphs");
-
-// 1. Write JavaScript code that changes the text in the paragraph below
-//    (the <p> tag) from "Hello World!" to "Goodbye World!".
+  
+// 3. Change the text from the default font color to blue
 
 
 
@@ -48,6 +42,8 @@ console.log("Images");
 // 1. Add an image to the HTML body (use the <img> tag). Make it disappear when
 //    someone clicks on it.
 
+// 2. Mouse over an object having an existing image and by mousing over another image appears in its place
+//
 
 
 //--------//
@@ -55,11 +51,12 @@ console.log("Images");
 //--------//
 console.log("Styles");
 
-// 1. Use the style of div1 and div2 to swap the colors of the divs.
+// 1. Use the style to increase the text "The Pirates will advance to the World Series in 2025" 
+// Use a paragraph style code and increase the text to 8 em
 
-function swapColors() {
-  // TODO
-}
+// 2. Use the style to decrease the text "The Pirates will advance to the World Series in 2025" 
+// Use a paragraph style code and increase the text to 5 em
+  
 
 
 
